smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-unicode-escape2.smithy
// Parse error at line 4, column 22 near `)\n`: Invalid unclosed unicode escape found in string
namespace smithy.example

@documentation("\uaa")
string MyString
